--- a/package.xml
+++ b/package.xml
@@ -11,6 +11,8 @@
   <depend>urdf</depend>
   <depend>launch</depend>
   <depend>std_msgs</depend>
+  <depend>geometry_msgs</depend>
+  
   
 
   <test_depend>ament_copyright</test_depend>
